--- a/BayrakBilmece/Ayarlar.resx
+++ b/BayrakBilmece/Ayarlar.resx
@@ -134,6 +134,101 @@
         hsvqc/7/yjZaAUDR+Hm9f8/sG9zFRMp0kIs3AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIMAAACDCAYAAACunahmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAFNhJREFUeF7tnc2PHMd5xvUn7J+wsSmRIilxFMC3ANlckksOiyCHwKc14MCAgQRE
+        TgEMJ4sgxwB7CHLIaQ8BRYsfHokWJRm2tbJjWQhsZUVTtrQUyeHXSuTyY0RqtfwwxfHza1YPZrqru6u6
+        q3t6yHmBB1xOz1RXVz311vu+9Vb1MzOZyUxmMpNY/vTHD+eFhQzMma/N5EkQ06lLwrLQFdaEvjDwRE/g
+        t6sCZS0KHXObmbRN1DlzppNWhHXB1ql1AJJAkAVTlZlMQtQBHaHpzi8CGuigMG+qOZO6hEYWIACq29YZ
+        bQIkZZqa2R8hxTQqKtnW6N44cPLLwYuvf5GLzht3rb8tCeyN2VRSVtR42AHMx6W0AB2+/7Vbg70/vDZ4
+        9pULg2d/0Fv/k//5/ZrQFZYdsCLw/TV+/9yRS1FZEOWltx5Y7+kACL1kHnEmRaLGikngZfnT+XTWc69c
+        6KsD4w5fEILM35RjyqPc7tdf/qS3++iViHAltAgEn5EiT9RAXiR44cTnAzrk64c26PyDdJgpqhHhfua+
+        3V2Hzw32da/7EgO7YjZ9jIoaBLfQaTpAAzwmwJlVdcKiKaIVQn2EVYiBxvCYTpg+nm4PhAYQcMdsDTQG
+        GtfM+0tCqy106kc9v3ZoYx3iQmDbMyWARlw2RTxdogfHHy+cEiCBRhrTwNSpU9W/s/9Efw2jM/lcOWDq
+        eDoinHpQDMRCbfCYBOeZCqZKfaruTHm4klVjIQdNkU+m6AGJGuZqA0aRXDlcuqkZHap3HA0NHQxj0Dx5
+        QSs9FNOC7YEjYGztOfZpTyRolVGIqH50drzoBeKFL+DlApcABHtypg09DGrT9qARcBHlt+O/BxkFKhPD
+        tNT0ot/FHU+d27LuAeGmOy6hB8A+yAwjR9rg6CYeQjDmq1zUdXwPJy2j703Lmsd0EkIVhwi5I2vPsc1V
+        8/UgojIZ0aP36JpLmWJ+U7eqD4mgbVa7qMKFRDAIyvQXfnQn6aWsm0tW4f6J708LpoMQqqgrEUDhyPUR
+        fHrLPax2iD7PNWinAO0mhCroQwTQMz8NInJLbWRIRfX0Wa5BO0VoJyFUMV8igL75eWlRGRh/qHv+td5D
+        GBqo+ttLIxD8IqRcYdm6brQvhK1KZXoNOVgzPy8tKgMC9jpv3M3r5P6//+6rxcFgsHD44qPef599NDix
+        +Wjwm1t2cB386+mvBicv3GYtpAMhSqxKNoX2eBmqTFm1WynkqmmBDOioLI3gMbfwz3/2MOrMtWuPBnf+
+        IBpUlN/dujt4+Uy//91fbg3v0TJMPjClSpSyyFG7e394rdK6g0Yp0cCoPNQ5/8YEqFMgF5rl73711dgz
+        TRhMh5Nbx9HNidbZKlYIdV7luU5kGGqD75+6N9jcMb2VIzt37w62t7fHUEWYVv7+160hRa4rXZvoxhiM
+        pSJ20giVbQWE3MRvvftFLglu374zuLy52d8488naqdMfdoVl8PMPPl595f3zg599sDHQ/wdnPjk72Pz0
+        s4gsZQRtxNRke96GsWKapznRTa3L0EVWt+Z5ws+V1yDUgXO/3drumr5IyQdbO4PvvXd98BevXbTer/Pm
+        vWHY+m/e3l5UeUsCZBl8tLERkchXmD7+ab0VWqK53A/djDX7VCWktvt5WT0HTm6TrFrZ0Llw6VLny52d
+        numDpPS+83a0BA4yF78SAapoIUhY+M4v+kvd98/1IMW5873Bw4cPTbHucujCo7HnngDQ2EEW/XKFmwip
+        WL4xCJeysnq4LrVembFS90v379/vm3ZPyrrg1AgZ0cohvv3zzwfvnfpo8OHvPyo1dWBg2sptEPVPF7qJ
+        1Y2UQRiFlrPIIKJUNhhR5bf6WTwYcMHJmlZ95l56835hgGzx7S8HP/r/s6UJQawiWWbDqG+6oPDEzSIY
+        9R+NSBsZsBOiAiqIiND59OrVTCZICkeC6oJW81qq/rOfPBhqiPsPHphbucuEPY2g4f4xUeHW0bTn2OYw
+        b8BGBqnkynbCx2c+WS+Yv3NHgeoBkUt5P2iI2IbwFTydCXsZ4XMpVag1uMSysflKJBYyVF5MUUcs50wP
+        sVjJoPsTC/FdM0nh3351NSKEQz1SMuHpAvsurDGpAlOjCu8haa2zxS2+HiLKqA6Yk4ruO1j1Y9OE7h9n
+        L43VuQqISeB2+grawVZegwi3mKXCrFph36s3U2llIscqizqQYveRy5UXUESGpUtXrphmzZX+X70TGbcp
+        TycU/vF/b0baoUzUcsLxh3DaQQWltIKs8cwoogjREYLEydX43es3bpgmzZd/+e0fxuoYGrEx6UjOMWmB
+        q1ldO6iQrIWoRtbRfUbi5e0HZFn32D7vuKXNG6u/vlhqqti4k0+GLJc8IKprBxWQZYE3suOnhFqOdmPv
+        evlsZaPRhn/+5fVoqigTmbSVB54/fpWQ+TL5ErbrAVG+z/Rja1zBoPaUKzV6pwQZMPfndh0+6720TuIK
+        m2XRLFkj9Zvv3CltN9jK29vdGq6dFEVFA6B83EE/LkpaqXX9XI0+V6bh37vxiEW0lGZg6qCTyX1Qh9MJ
+        axi7kGDke6xpsIu6G+dIjAK7IRQZXnrr/pg31gAZgH9UUj8iWmcrbBRBlqLzhIa/em3LNKeb2Fy5WBUb
+        DL0g/d1BGyQIEWk9XVu12R4BNcNY+x04udMEGfw1uhrHNXG01vw7Nfw6uQa+MhoGljawLmPHwjWO/xl5
+        JoDtMbfn2GbKVa2LDGwztHynDvgZkvqBqwFWX/xbooZfofF91wViMhD42n3kcmE4XB2/lNAOkfX9/PHP
+        UoGrMmTI8CbGssOf/cH5XlE+SCC4D2CihpYC8lDbzmk1/DyN77suMLIe4OQCowUsRuMSq62jn/3lT+9G
+        ZPD1JnLiDEOiqg4dmyaqAe6blzymiBi1ehZqfFLVBq7Bpzi5xIwyZ5UYk0EE4GiAyJBkd/joaMWbYAXT
+        V0jUjctIYGyU6p5j5KsL5nbFQnTRVkAOap0qEJEhSkkrMiZJUEUroPL3dq97JXio4/vm3KghgfT3PLmW
+        eBbg+++c6/UuXjR3c5eclcsxzaX75bnzIVGszWmIEvNW5Z1RLiIyRPYDEUBWD0ftiJ2dnf7xja043Q0M
+        AyyqHyuXNDKID9zAFoD0INemUFnxGZDEPZzD47EUhKLHtCr3sXynDhQPFBafLD/MhX5TewAqFnUGNgSk
+        INs5Bv8fi3moXhDAdXOP8xyq+/R9jdmC/RXYCBAgPiTEmmhcA4oTjl58fdt52Re1uevw2WhuNT+fqKhO
+        NGh8wJa1zhlw0mwiwqLvFEEKveV+bUF+v7nYC/jD5ji+WiOQrqI6MbJKZTGNoPBZRIaur0v517+w3qst
+        yI9GJnztMXBNPjuaoL5ES09RvdAGIdyxXBeUacjXvW1BQmwRsp8ZA8nygwh7u1vE0RtZqXQV1av0rq4M
+        MGejZZhqmC6HJPuv/7vsFWjCq4l/22Jk20r7T/StK33mXMZWTAmjorr52galQGzBx1ZgZ1XLp4cY2Ubk
+        i69/kQp45GU0TVJUt8aO4WFPpo8H0aKNuIUwzZmWjCXURjKafER1Cpromgd2VvmsmuZEGjNBUktdmVkO
+        sHsUGUuorTkVRHXBRqglgykL75w+67wOMRpc8gnc8d1dh8/n7lOtEXZnwLJQk/3lCYjq0kjcPgZ7JVz3
+        SSSjjL6jnen4a4c21hpIfUtiOskg1zak55ALVidPn3UzGm3h5s6b97ssSSc/LwBZ5STfrLMeEoNtBzVq
+        jbQZoArM2WIM5vLEBW8mWbc6QRa0y2bbnHUHVj4X6EjLtSzgymIPEZLm3+hFK0L0hhuIUQMprGSwLpCY
+        yxMXNWpTCziRK8kpLkVSsAAFFnh9UomFv1FgI0VGnvqIBbPQU8lUkqExe8HFaHQgAohC9p7awYaxeIDK
+        XN5z/DPb98pg+shgi4HUAfZFFBmNjkSIMc8bdSyf+2LMdoMQLBRavueL6SNDE2nkpMG//1F+8q0nEUD0
+        lr0M49wJZppJRYB5hWPFKQjMyGBD0fpDCSLEmOctO5bPc0FHM/rllVgTUdRnzlMQZWVMLTMyJIErmbcq
+        WYEIAO2w4jqK+R6dbN7dmZuFxXdsZYyC8p47cnE1w+6akSEJXMksrVCRCBHUEU5uZkQCj1c00W957mZM
+        BL7rRQYbc83liUudZMhblQyYqbSSZ0gS4ym7OpxnSI6mJPqQodPmCGSdZGBV0qYV2PgS8DymKCnI1nHE
+        DaQNSueK7Hv1htUeeeHE52MuqeVNPSBNBqTNZCDDylK3yuDwLputQE5C4IO5olQAckbRAqh2DLoQL3LV
+        iE+1jdnUO1ZuxoCyp8xnqJvadkv5yO6jV2qJM+BB2OIKNZwYH5EBDSxgEwzf6q9rPJv7LqeEaKCklvSJ
+        y5jLQznwxo5txdc+2DPUjV2NNCxquOReyMogrmDbHfUfH9eSnJLaTqDPyCyL27z0RiTaJjGQUwevIRmG
+        pl0r2dSN4LUrqS7h4Sw7pSuBA7uS5zPVmLsYkUH/kmfKSE4OvEr5pWqf1XjNQtNBqs903Zrfai6nhfdM
+        Wn7QmrQ3PdAihAilIXAnk1PEBFPWKtkNiNqHqQcbxKIVtm2bo7JzIPFvLT9ojXuJwHAO18hzp1xx6vT4
+        Vv+iQ7hqRPHupoqiAWTr22w7RQ29kDHqWmFEjgojoAohbLupa7IVXFD7FoSMlMZse1ANPJ9xekgrM6Qh
+        RNm1fVYnky7lBNPbnaKNVaTUIGezjOVHoFUbaGIRIQ6SAZS1Koj24PQ2onvkGPJdDvX6z/fOj2U9T3CK
+        qH3TsgzKrM1R+SRUQ+XtAsYKrp3FvoJGQ0vI5unR2eC5Vy6SdoYxlfKj9Vnnrd982BvdWh9i/cEXuHqq
+        a+1BPWkF2x6TYldWDeWyOQVjpHWk8BGMx9EQdNP2ApqMsypNdWqVDHuhWCMxarJUbgLD3LxpExEhOl9y
+        NOG1SZdSapugUOV3cLhKxtK5GxGfP37VNbgzlYQQERYgw6g0ZTw2TYSM+AJw6zfPnL1WhKt9xEYGy3MF
+        h9nJ3hgRkM6b92x96R7XUIUXPfLzGznPKaSICAchA94EOP/ZDdtzBQWhfrVr41qU1UtLffw8Q4+pArQu
+        KJUnRjNEb76FGN/oXql1/yYGnLl1o6J7Z00RfqFvz6mi9PJrG0Qj9mCo9Y4MTGSw6L62PvTvK6YKR68i
+        RuWFlkkJ6nv3kctBV0QTaDxgp3tmHQRfzp31TO9uxVJ3WUE71HiQd+NGNvdM1AGUt+/UQMse6nPqDMmk
+        1JVaJ6RsBn3GyK0t+qiyUwOZl8Gby/6C+pQVPFZgAVpzsEcZ2f/aLesSfgDYyBDP58HXJlRm1lt4qk3l
+        nruImXenwrMYDAbzwqKwbLDwt+9+VZdmSBltIxo3uKehMi1a4X51I1/aocwuYkgB81tHDEMA3qZvFdLe
+        aghNj2lM/X90w1JQMnCvkbKHUB+GmZIqnjEASye+sHXq9Ifzd+/dWzN9XihlDuqywQR9hs+uv1lOHo1r
+        hCZDSisEjXOU1A5J0CgTsSlEhM7Nm7fcDmcakaqEYACR4m+qERMh6cIG8zQoK1F2hGBaIRa0Q6DADKOi
+        sfg8GuFcr+dNBKTqRhoSjE01ItFnNpskSHyGcoQk0ciZCB8QxLMI+MqcxtxQkWHV9cQ2m5R5hzUaId7s
+        Gos+T51JdeDkdjBPQuWlkpKoh7RCPcFA4g6eUck8NKIdRIa+z5nPSfE9DNxGBGTfqzdSSUOhOkplWdcg
+        1Ff1BrsCvVa4Ec0gIpR6Seqo+JCBadRGBEQdn5zPg2gFlUPwKqWxVRfS/uo12nUD3+PsbAimHvMkJkOV
+        acLViGTJPy+NzbJXNIhRp3Ks04Om9GbcehFixSPfwYbGvAqmCd/3RMTiakAWEQFRmy3Faf2hXD2VZc1X
+        3f/areZWkVE/TBcw0FYZBzTpTUSvQbx9+47pYndxSZKlDVwTW9Vu7L7mOMDKz697W0/aaWR6SAoPVHLZ
+        t9EFLTNVrLN7yuXE11jid2MWoXYjzSK6ry1eERGzidR7q4gQQ9XngeZUmJGYEGgI0twKDvzs/cO715xI
+        nnzLfROi+2aerD8a4JqIqDFWPd3NSUUhIQRTRh8twRlOcQ4k2Nq63r905QrXOau50EhmFDbd+LpvJhH2
+        dq83Psiswq5oF4OSkWR+MlFRh5MDSVJslAPJ/82loWStx/AZW/ayzmasS3TvTCJoMI69pXeiQkV4bbCt
+        8Uax59inrdyvaRM90zyvQ0ZDcPZStG3v8auRC89mDC1qu0wimH0Y7Uo5pIF2HT7fLyBEo40YQvRckzHI
+        jKjNMokgz6HxfRjO4kAIDLOJNu40idrK6jUAiCBvrt2Dy1FDTM10MSlRG5GkYiWCS5CrNeJICMKo7TB6
+        WiS0iZA6yi/GgZPbfbXtVG1aGhKCxRvbQxmQlTN1dkRdQlsIVvsANL1pN6hQcUe3c7LBkhYIbZBokzHs
+        e/Xm9BIhFj3AHMfnOBzGxYh46rSEnpk1hlTeYgym2uePX21PHCGE6GFWHN+r1MqjgkKLnpHMp7wjk4b5
+        EU8UEWLRQy052BEAK3o6rGVP0XNBgsJNzWz1q3LS/FSICDGPHeG4wIX6fCJIoedwIgHTwp6jm0wLT8+U
+        qYddJsTroCXA1JJC9SY/MXc6iBFpg0NnVp7IaaFIYD/GpUcaHaSY+IacIlH90ALUM9MwHAUDwmiDWXRW
+        jbDEopCDxzEKRltrgi+qCwQgDS0zTpAEU4I55+mpd63HBNVIo3BqvGd+BMYmczHh20Y1hu6HW4j340wA
+        EJFA2pBlcp7bFDeTpBhSrEIKT00Rg46hgyBHMCOMsgTmf8outVs7QYJ2LTu3WQwplpk+8DxoSFsDOwKC
+        0IF0JHM5oGMZ2aOAQPH1uNO9Rr0NkU1wbLM/I0EAUQMuCeu7j16JLG5bg7cNkNdkRJGtzEtBZtNBSFGD
+        8rKvFXkgvTYSIyYAWePUk/qaqs+kTjHEYB/COq8QYCrxNDwrg86HkFFa3OOUuBkBJi3qAOyLRdMZ0Tsl
+        6KCYII6BrVxQDh2PAQj52ERk7scUNrMD2izqIDQHBEF7YLgNXz4yCjo3BlPP2PXHo51jfvk95VDebOTP
+        ZCYzeWrkmWf+CO6XhymnO1PuAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAAaagAAZgAAAICAAAABACAAKAgBAIBqAABAQAAAAQAgAChCAACocgEAMDAAAAEA
